Fix table padding on mobile

--- a/assets/styles/component/table.css
+++ b/assets/styles/component/table.css
@@ -11,8 +11,16 @@
 
     .table th,
     .table td {
-        padding: 12px 16px;
+        padding: 12px;
         text-align: left;
+    }
+
+    /* NB: Container query would be better, but not supported on a table, would require a wrapper div */
+    @media (min-width: 800px) {
+        .table th,
+        .table td {
+            padding: 12px 16px;
+        }
     }
 
     .table thead {
